# aoc2024

./: .clang-format  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt
src/01/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/02/: CMakeLists.txt  solution.cpp  test.cpp
src/03/: CMakeLists.txt  solution.cpp  test.cpp
src/04/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/05/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/06/: CMakeLists.txt  solution.cpp  test.cpp
src/07/: CMakeLists.txt  solution.cpp  test.cpp
src/08/: CMakeLists.txt  solution.cpp  test.cpp
src/09/: CMakeLists.txt  solution.cpp  test.cpp
src/10/: CMakeLists.txt  solution.cpp  test.cpp
src/11/: CMakeLists.txt  solution.cpp  test.cpp
src/12/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/13/: CMakeLists.txt  solution.cpp  test.cpp
src/14/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/15/: CMakeLists.txt  solution.cpp  test.cpp
src/16/: CMakeLists.txt  solution.cpp  test.cpp
src/17/: CMakeLists.txt  solution.cpp  test.cpp
src/18/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/19/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/20/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/21/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/22/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/23/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/24/: CMakeLists.txt  solution.cpp  test.cpp
src/25/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/common/: dijkstra.hpp  vec2.hpp
